<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="60dp"
    app:cardBackgroundColor="@color/cardview_Background"
    android:layout_gravity="center"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        >

        <ImageView
            android:id="@+id/hdchannel1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/hdchannelradious"
            android:scaleType="centerCrop"
            android:src="@drawable/channel_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/desc"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/channelNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hd_channel_number"
            android:textColor="@color/camila_text"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/hdchannel1"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/album_name_attistname"
            android:textColor="@color/camila_text"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/hdchannel1"
            app:layout_constraintTop_toBottomOf="@+id/channelNumber"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="#E91E63"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginHorizontal="10dp"/>

</androidx.cardview.widget.CardView>