<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/home_Background"
    android:layout_gravity="top"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_Background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="12dp">

            <ImageView
                android:id="@+id/channelImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/hdchannelradious"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop"
                android:src="@drawable/harris"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/channelNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hd_channel_number"
                android:textColor="@color/camila_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/channelImg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/album_name_attistname"
                android:textColor="@color/camila_text"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/channelImg"
                app:layout_constraintTop_toBottomOf="@+id/channelNum"
                tools:ignore="SmallSp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/deleteFav"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:backgroundTint="#292626"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_baseline_delete_forever_24"
                android:textColor="@color/camila_text"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>